--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -59,4 +59,5 @@ appsLocalCache: 0
 appsListMode: ['local', 'remote']
 defaultAppsList: 'public/assets/agaveAppsList.json'
 queue_length: 3
-visual_file_types: ['.html', '.plot']
+stage_file_types: ['.plot']
+anon_prefix: 'https://de.cyverse.org/anon-files'
