--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -65,3 +65,5 @@ defaultAppsList: 'public/assets/agaveAppsList.json'
 queue_length: 3
 stage_file_types: ['.plot.tgz', '.view.tgz']
 anon_prefix: 'https://de.cyverse.org/anon-files'
+site_warning: 0
+site_warning_file: 'site_warning.txt'
