--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -61,3 +61,7 @@ appsLocalCache: 0
 appsListMode: ['remote']
 defaultAppsList: 'public/assets/agaveAppsList.json'
 queue_length: 3
+stage_file_types: ['.plot.tgz', '.view.tgz']
+anon_prefix: 'https://de.cyverse.org/anon-files'
+site_warning: 0
+site_warning_file: 'site_warning.txt'
