--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -49,6 +49,10 @@ datastore:
     system: 'data.iplantcollaborative.org'
     home: '/iplant/home'
     path: '__user__/sci_data/results'
+  __visual__: 
+    system: 'halcott.cshl.edu'
+    home: '/agave_data'
+    path: 'results/vi2'
   __system__:
     system: ''
     home: ''
