--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -69,3 +69,7 @@ stage_file_types: ['.plot.tgz', '.view.tgz']
 anon_prefix: 'https://de.cyverse.org/anon-files'
 site_warning: 0
 site_warning_file: 'site_warning.txt'
+upload_file_input: 'fileToUpload'
+user_params_input: 'paramsFromUser'
+retry_interval: 1
+retry_num: 2
