--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -71,3 +71,5 @@ upload_file_input: 'fileToUpload'
 user_params_input: 'paramsFromUser'
 retry_interval: 1
 retry_num: 2
+datamenu_item:
+  Maize_Code: 'MC_'
