--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -65,7 +65,7 @@ appsListMode: ['local', 'remote']
 defaultAppsList: 'public/assets/agaveAppsList.json'
 queue_length: 3
 stage_file_types: ['.plot.tgz', '.view.tgz']
-anon_prefix: 'https://de.cyverse.org/anon-files'
+anon_prefix: 'https://data.cyverse.org/dav-anon'
 site_warning: 0
 site_warning_file: 'site_warning.txt'
 upload_file_input: 'fileToUpload'
