--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -73,5 +73,6 @@ retry_interval: 1
 retry_num: 2
 datamenu_item:
   MaizeCODE: 'MC_'
+  SorghumBase: 'SB_'
 toolsmenu_item:
   JBrowse: 'https://data.sciapps.org/view2/?data=data2/B73/v4/apollo_data'
