--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -40,6 +40,10 @@ datastore:
     system: 'data.iplantcollaborative.org'
     home: '/iplant/home'
     path: '__user__/sci_data'
+  __shared__:
+    system: 'data.iplantcollaborative.org'
+    home: '/iplant/home'
+    path: 'shared'
   __sorghumDB__: 
     system: 'sciapps.org'
     home: '/agave_data'
@@ -60,7 +64,7 @@ datastore:
     system: 'sciapps.org'
     home: '/agave_data'
     path: 'results'
-datastore_types: ['CyVerse', 'exampleData']
+datastore_types: ['CyVerse', 'exampleData', 'shared']
 uncompress_suffix: '.open.tar.gz'
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
 appsLocalCache: 0
