Assign deleted jobs to an admin user

--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -36,6 +36,7 @@ email: 'noreply@sciapps.org'
 wf_step_prefix: 'wf_step_'
 maxRunTime: "96:00:00"
 defaultUser: 'maizecode'
+adminUser: 'sciapps'
 datastore:
   __home__: 
     system: 'data.iplantcollaborative.org'
